--- a/index.css
+++ b/index.css
@@ -30,8 +30,7 @@ h2
 
 .card
 {            
-    flex-basis: 200px;
-    width: 200px;
+    flex: 0 1 200px;
     color: black;
     padding: 20px;
     border-radius: 2%;
