--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body
     font-weight: 400;
     font-style: normal;
     background-color: #75A47F;
+    margin: 20px;
 }
 
 h1{
@@ -16,12 +17,15 @@ h2
     clear: both;
     color: #1F1717;
     text-shadow:2px 3px 1px #BACD92;
-    margin: 20px;
+    padding: 10px;
+}
+
+.section svg{
+    margin-left: 20px;
 }
 
 .section
 {
-    margin: 10px;
     padding: 10px;
     border: 2px solid #BACD92;
     background-color: #FCFFE0;
@@ -32,22 +36,52 @@ h2
 {            
     justify-content: center;
     color: black;
-    padding: 20px;
+    padding: 10px;
     border-radius: 2%;
 }
 
 .container
 {
     display: flex;
+    flex-direction: row;
     gap: 20px;
     flex-wrap: wrap;
 }
 
-.intro.section .card{
-
-    flex-basis: auto;
-    width: auto;
+.intro.section
+{
+    grid-column: span 2;
+    order: 0;
 }
+
+.contact.section
+{
+    grid-column: span 1;
+    order: 0;
+ }
+
+ .school.section
+ {
+    grid-column: span 1;
+    order: 1;
+ }
+ 
+ .work.section
+ {
+    grid-column: span 2;
+     order: 2;
+ }
+ 
+ .other.section {
+    grid-column: span 3;
+     order: 3;
+ }
+ 
+ .projects.section 
+ {
+    grid-column: span 3;
+    order: 4;
+ }
 
 .intro.section img
 {
@@ -55,24 +89,14 @@ h2
     margin-right: 20px;
 }
 
-.school.section .container .card
+.projects.section .container 
 {
-    max-width: 300px;
-}
-
-.work.section .container .card
-{
-    max-width: 300px;
-}
-
-.other.section .container .card
-{
-    max-width:200px;
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr; 
 }
 
 .projects.section .container .card
 {
-    flex: 0 1 300px;
 }
 
 .projects.section .container .card.sma
@@ -97,17 +121,54 @@ h2
 {
     order: 4;
 }
+
 .projects.section .container .card img /* project圖 */
 {
     border-radius: 5px;
     width: 100%;
 }
 
+.grid
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(1, auto);
+    gap:20px;
+}
+
 @media (max-width: 600px){
-    .projects.section .container .card
+    .projects.section .container
     {
         flex-direction: column;
         flex: auto;
     }
+    .grid
+    {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
     
+    .intro.section
+    {
+        grid-column: span 1;
+    }
+    
+    .work.section
+    {
+        grid-column: span 1;
+    }
+    
+    .other.section {
+        grid-column: span 1;
+    }
+    
+    .projects.section 
+    {
+        grid-column: span 1;
+    }
+
+    .projects.section .container 
+    {
+        grid-template-columns: 1fr; 
+    }
 }
