gap, margin, h1, footer  adjustment

--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body
     font-weight: 400;
     font-style: normal;
     background-color: #75A47F;
-    margin: 20px;
+    margin: 0px;
 }
 
 h1{
@@ -32,10 +32,9 @@ h3
 
 .section
 {
-    padding: 50px;
+    padding: 50px 100px;
     border: 2px solid #BACD92;
     background-color: #FCFFE0;
-    border-radius: 20px;
 }
 
 .card
@@ -138,7 +137,19 @@ h3
 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap:20px;
+    gap:10px;
+}
+
+h1
+{
+    padding: 20px;
+    text-align: center;
+}
+
+footer
+{
+    padding: 20px;
+    text-align: center;
 }
 
 @media (max-width: 600px)
@@ -160,7 +171,7 @@ h3
 
     .section
     {
-        padding: 20px;
+        padding: 20px 20px;
     }
 
     .container
