--- a/index.css
+++ b/index.css
@@ -6,27 +6,60 @@ body
     background-color: #75A47F;
 }
 
-h1{
+.my-navbar-bg{
+    background-color: #75A47F;
+}
+
+.my-btn-outline-success {
+    --bs-btn-color: black;
+    --bs-btn-border-color: black;
+    --bs-btn-hover-color: #BACD92;
+    --bs-btn-hover-bg: black;
+    --bs-btn-hover-border-color: black;
+    --bs-btn-focus-shadow-rgb: 25, 135, 84;
+    --bs-btn-active-color: #FCFFE0;
+    --bs-btn-active-bg: black;
+    --bs-btn-active-border-color: black;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: black;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: black;
+    --bs-gradient: none;
+}
+
+.my-form-control{
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: black;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: #FCFFE0;
+    background-clip: padding-box;
+    border: var(--bs-border-width) solid black;
+    border-radius: var(--bs-border-radius);
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.my-navbar-title{
     color: black;
     text-shadow: 2px 3px 1px #BACD92;
 }
 
 h2
 {
-    clear: both;
     color: #1F1717;
     text-shadow: 2px 3px 1px #BACD92;
     margin: 0px 0px 20px 0px;
 }
 
-.container
+main
 {
-    max-width: 100%;
-}
-
-.section svg
-{
-    margin-left: 20px;
+    padding-top: 3.5rem;
 }
 
 .section
@@ -34,18 +67,6 @@ h2
     border: 2px solid #BACD92;
     background-color: #FCFFE0;
     padding: 40px;
-}
-
-.myCard
-{            
-    color: darkred;
-}
-
- 
-.intro.section img
-{
-    float: left;
-    margin-right: 20px;
 }
 
 h1
