--- a/index.css
+++ b/index.css
@@ -3,13 +3,28 @@ body
     font-family: "LXGW WenKai TC", sans-serif;
     font-weight: 400;
     font-style: normal;
-    background-color: #75A47F;
+    background-color: skyblue;
 }
 
 main
 {
     background-color: white;
-    padding-top: 50px;
+}
+
+.section
+{
+    padding: 40px 20px;
+}
+
+.home
+{
+    background-color: skyblue;
+    height: 576px;
+}
+
+.section.profile
+{
+    margin-top: 80px;
 }
 
 .section.profile img
@@ -19,54 +34,10 @@ main
     border-radius: 50%;
 }
 
-.border-round
+.section.expertise img
 {
     border-radius: 50%;
     background-color: #75A47F;
-    fill: rebeccapurple;
-}
-
-.home-image{
-    background-color: #75A47F;
-}
-
-.my-navbar-bg{
-    background-color: #75A47F;
-}
-
-.my-btn-outline-success {
-    --bs-btn-color: black;
-    --bs-btn-border-color: black;
-    --bs-btn-hover-color: #BACD92;
-    --bs-btn-hover-bg: black;
-    --bs-btn-hover-border-color: black;
-    --bs-btn-focus-shadow-rgb: 25, 135, 84;
-    --bs-btn-active-color: #FCFFE0;
-    --bs-btn-active-bg: black;
-    --bs-btn-active-border-color: black;
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: black;
-    --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: black;
-    --bs-gradient: none;
-}
-
-.my-form-control{
-    display: block;
-    width: 100%;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: black;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-color: #FCFFE0;
-    background-clip: padding-box;
-    border: var(--bs-border-width) solid black;
-    border-radius: var(--bs-border-radius);
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 ul
@@ -76,16 +47,11 @@ ul
 
 ul li
 {
-    list-style: none;
     line-height: 2rem;
 }
 
-ul li:before
-{
-    content:"．";
-}
-
 .list-topic{
+    text-align: center;
     margin-bottom: 10px;
     color: #BACD92;
 }
@@ -97,14 +63,9 @@ ul li:before
     display: block;
 }
 
-.my-navbar-title{
-    color: black;
-}
-
 h1
 {
     color: #75A47F;
-    margin: 50px;
     text-align: center;
 }
 
@@ -115,31 +76,19 @@ h2
     text-align: center;
 }
 
-
-.section
-{
-    padding: 40px 100px;
-    height: 100%;
-    width: 100%;
-}
-
-.card{
+.work.section .card{
     height: 100%;
 }
 
 .center-block{
-    display:block;
+    display: block;
     margin-right: auto;
     margin-left: auto;
 }
 
-.expertice-image{
-    min-height: 50px;
-    max-height: 150px;
-}
-
-.btn {
-    margin: 50px auto 50px;
+.section.contact .btn {
+    margin-top: 50px;
+    margin-bottom: 50px;
     --bs-btn-color: #fff;
     --bs-btn-bg: #75A47F;
     --bs-btn-border-color: #BACD92;
@@ -156,23 +105,24 @@ h2
     --bs-btn-disabled-border-color: #75A47F;
 }
 
-.section.btn
-{
-    display: block;
-    margin: 40% auto 60%
-}
-
 footer
 {
-    background-color: #75A47F;
+    background-color: skyblue;
     padding: 20px;
     text-align: center;
 }
 
-@media (max-width: 1000px)
+/* md */
+@media (min-width: 768px)
 {
+    .list-topic
+    {
+        text-align: left;
+    }
+    
     .section
     {
-        padding: 40px 20px;
+        padding-left: 100px;
+        padding-right: 100px;
     }
 }
