--- a/index.css
+++ b/index.css
@@ -3,12 +3,6 @@ body
     font-family: "LXGW WenKai TC", sans-serif;
     font-weight: 400;
     font-style: normal;
-    background-color: skyblue;
-}
-
-main
-{
-    background-color: white;
 }
 
 .section
@@ -117,7 +111,7 @@ h2
 
 footer
 {
-    background-color: skyblue;
+    background-color: #2F9C2F;
     padding: 20px;
     text-align: center;
 }
