--- a/index.css
+++ b/index.css
@@ -1,8 +1,21 @@
+#cover
+{
+    width: 100%;
+    color:black;
+    position:absolute;
+    background-color: white;
+    border: 1px solid white;
+    height:100vh;
+    width: 100%;
+    
+}
+
 body
 {
     font-family: "LXGW WenKai TC", sans-serif;
     font-weight: 400;
     font-style: normal;
+    overflow: hidden;
 }
 
 .section
@@ -10,21 +23,6 @@ body
     padding: 40px 20px;
 }
 
-.home1
-{
-    background-color: skyblue;
-    height: 70vh;
-}
-.home2
-{
-    background-color: skyblue;
-    height: 10vh;
-}
-.home3
-{
-    background-color: #2F9C2F;
-    height: 20vh;
-}
 .section.profile
 {
     margin-top: 80px;
