--- a/index.css
+++ b/index.css
@@ -18,6 +18,11 @@
     width: 100%;
 }
 
+.canvas
+{
+    display:block;
+}
+
 body
 {
     font-family: "LXGW WenKai TC", sans-serif;
@@ -26,14 +31,17 @@ body
     overflow: hidden;
 }
 
+body .section
+{
+    vertical-align: middle;
+}
+
 .section
 {
     padding: 40px 20px;
-}
-
-.section.profile
-{
-    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .section.profile img
@@ -46,7 +54,7 @@ body
 .section.expertise img
 {
     border-radius: 50%;
-    background-color: #75A47F;
+    background-color: #85c984;
 }
 
 ul
@@ -63,7 +71,7 @@ ul li
 .list-topic{
     text-align: center;
     margin-bottom: 10px;
-    color: #BACD92;
+    color: #85c984;
 }
 
 .text
@@ -75,13 +83,13 @@ ul li
 
 h1
 {
-    color: #75A47F;
+    color: #85c984;
     text-align: center;
 }
 
 h2
 {
-    color: #75A47F;
+    color: #85c984;
     margin: 50px 0px 50px 0px;
     text-align: center;
 }
@@ -94,25 +102,20 @@ h2
     display: block;
     margin-right: auto;
     margin-left: auto;
+    width: fit-content;
 }
 
 .section.contact .btn {
     margin-top: 50px;
     margin-bottom: 50px;
     --bs-btn-color: #fff;
-    --bs-btn-bg: #75A47F;
-    --bs-btn-border-color: #BACD92;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #BACD92;
-    --bs-btn-hover-border-color: #75A47F;
-    --bs-btn-focus-shadow-rgb: 49, 132, 253;
+    --bs-btn-bg: #2F9C2F;
+    --bs-btn-border-color: #fff;
+    --bs-btn-hover-color: #ffffff;
+    --bs-btn-hover-bg: #85c984;
+    --bs-btn-hover-border-color: #85c984;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #75A47F;
-    --bs-btn-active-border-color: #75A47F;
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #75A47F;
-    --bs-btn-disabled-border-color: #75A47F;
+    --bs-btn-active-bg: #2F9C2F;
 }
 
 footer
